<resources>
    <string name="app_name">Blog</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
